@@ -1,6 +1,11 @@
 $Id$
             
-            [- Version 2.1.46 -]
+            [- Version 2.1.47 -]
+2009-06-24: misc.lisp: Exported 'string-begins'
+            base.lisp: In '\(-excl-dispatch', changed 'cerror' to
+              'error'. 
+
+            [- Version 2.1.46 2009/05/27 22:57:04 airfoyle Exp -]
 2009-05-27: repeat.lisp: Instead of gensyming function name, get it
                from blecherous ':fcn-name' entry in the alist analyzed
                for a given (x = ...) repeat var.  (See synchronous
